# CameraSocket

./: .gitignore  CMakeLists.txt  README.md  camera_client.cpp  camera_server.cpp  simple_client.cpp  simple_server.cpp
lib/: ClientSocket.cpp  ClientSocket.h  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h  SocketException.h
